--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "dbt-core>=1.10.3",
     "dbt-postgres>=1.9.0",
     "dlt[postgres]>=1.12.3",
+    "nats-py>=2.11.0",
     "pre-commit>=4.2.0",
     "prefect-dbt>=0.7.4",
     "prefect-shell>=0.3.1",
