--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,48 @@
 agate==1.9.1
 aiosqlite==0.21.0
-alembic==1.16.2
+alembic==1.16.4
 annotated-types==0.7.0
-anyio==4.9.0
-apprise==1.9.3
+anyio==4.10.0
+apprise==1.9.4
 asgi-lifespan==2.1.0
 asyncpg==0.30.0
 attrs==25.3.0
 babel==2.17.0
 cachetools==6.1.0
-certifi==2025.6.15
+certifi==2025.8.3
 cffi==1.17.1
 cfgv==3.4.0
-charset-normalizer==3.4.2
+charset-normalizer==3.4.3
 click==8.1.8
 cloudpickle==3.1.1
 colorama==0.4.6
 coolname==2.2.0
-cryptography==45.0.4
+cryptography==45.0.6
 daff==1.4.2
-dateparser==1.2.1
+dateparser==1.2.2
 dbt==1.0.0.40.5
-dbt-adapters==1.16.0
-dbt-common==1.26.0
-dbt-core==1.10.3
+dbt-adapters==1.16.4
+dbt-common==1.28.0
+dbt-core==1.10.9
 dbt-extractor==0.6.0
 dbt-postgres==1.9.0
-dbt-protos==1.0.337
-dbt-semantic-interfaces==0.8.5
+dbt-protos==1.0.348
+dbt-semantic-interfaces==0.9.0
 deepdiff==7.0.1
-distlib==0.3.9
-dlt==1.12.3
+distlib==0.4.0
+dlt==1.15.0
 docker==7.1.0
 exceptiongroup==1.3.0
-fastapi==0.115.13
-filelock==3.18.0
-fsspec==2025.5.1
+fastapi==0.116.1
+filelock==3.19.1
+fsspec==2025.7.0
 gitdb==4.0.12
-gitpython==3.1.44
+gitpython==3.1.45
 giturlparse==0.12.0
 graphql-core==3.2.6
 graphviz==0.21
-greenlet==3.2.3
-griffe==1.7.3
+greenlet==3.2.4
+griffe==1.12.1
 h11==0.16.0
 h2==4.2.0
 hexbytes==1.3.1
@@ -51,7 +51,7 @@ httpcore==1.0.9
 httpx==0.28.1
 humanize==4.12.3
 hyperframe==6.1.0
-identify==2.6.12
+identify==2.6.13
 idna==3.10
 importlib-metadata==8.7.0
 isodate==0.6.1
@@ -60,23 +60,24 @@ jinja2-humanize-extension==0.4.0
 jsonpatch==1.33
 jsonpath-ng==1.7.0
 jsonpointer==3.0.0
-jsonschema==4.24.0
+jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 leather==0.4.0
 mako==1.3.10
 markdown==3.8.2
-markdown-it-py==3.0.0
+markdown-it-py==4.0.0
 markupsafe==3.0.2
 mashumaro==3.14
 mdurl==0.1.2
 more-itertools==10.7.0
 msgpack==1.1.1
+nats-py==2.11.0
 networkx==3.5
 nodeenv==1.9.1
 oauthlib==3.3.1
-opentelemetry-api==1.34.1
+opentelemetry-api==1.36.0
 ordered-set==4.1.0
-orjson==3.10.18
+orjson==3.11.2
 packaging==25.0
 parsedatetime==2.6
 pathspec==0.12.1
@@ -85,38 +86,38 @@ pendulum==3.1.0
 platformdirs==4.3.8
 pluggy==1.6.0
 ply==3.11
-pre-commit==4.2.0
-prefect==3.4.7
-prefect-dbt==0.7.4
+pre-commit==4.3.0
+prefect==3.4.13
+prefect-dbt==0.7.6
 prefect-github==0.3.1
 prefect-shell==0.3.1
 prometheus-client==0.22.1
-protobuf==5.29.5
+protobuf==6.32.0
 psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.11.7
 pydantic-core==2.33.2
 pydantic-extra-types==2.10.5
-pydantic-settings==2.10.0
+pydantic-settings==2.10.1
 pygments==2.19.2
 pymysql==1.1.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
+python-dotenv==1.1.1
 python-slugify==8.0.4
-python-socks==2.7.1
+python-socks==2.7.2
 pytimeparse==1.1.8
 pytz==2025.2
 pyyaml==6.0.2
 readchar==4.2.1
 referencing==0.36.2
-regex==2024.11.6
+regex==2025.7.34
 requests==2.32.4
 requests-oauthlib==2.0.0
 requirements-parser==0.13.0
 rfc3339-validator==0.1.4
-rich==14.0.0
+rich==14.1.0
 rich-argparse==1.7.1
-rpds-py==0.25.1
+rpds-py==0.27.0
 ruamel-yaml==0.18.14
 ruamel-yaml-clib==0.2.12
 semver==3.0.4
@@ -128,23 +129,23 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 snowplow-tracker==1.1.0
-sqlalchemy==2.0.41
-sqlglot==26.30.0
+sqlalchemy==2.0.43
+sqlglot==27.7.0
 sqlparse==0.5.3
-starlette==0.46.2
+starlette==0.47.2
 tenacity==9.1.2
 text-unidecode==1.3
 toml==0.10.2
 tomlkit==0.13.3
 typer==0.16.0
-typing-extensions==4.14.0
+typing-extensions==4.14.1
 typing-inspection==0.4.1
 tzdata==2025.2
 tzlocal==5.3.1
-ujson==5.10.0
 urllib3==2.5.0
-uv==0.7.14
-uvicorn==0.34.3
-virtualenv==20.31.2
+uv==0.8.11
+uvicorn==0.35.0
+virtualenv==20.34.0
 websockets==15.0.1
+whenever==0.8.8
 zipp==3.23.0
