--- a/lan_dbt/models/staging/source.yml
+++ b/lan_dbt/models/staging/source.yml
@@ -36,6 +36,8 @@ table_definitions: &common_tables
   - name: epcr_v2_qaqr_statuses
   - name: epcr_v3_export_trigger_log
   - name: cad_trip_leg_shift_assignments
+  - name: cad_trip_cancel_reason
+  - name: cad_trip_history_log
 
 # Source definitions using the common template
 sources:
