add int_mem_runs model and configure intermediate schema materialization

--- a/lan_dbt/dbt_project.yml
+++ b/lan_dbt/dbt_project.yml
@@ -35,6 +35,9 @@ models:
     analytics:
       +materialized: view
       +schema: analytics
+    intermediate:
+      +materialized: view
+      +schema: intermediate
 
 seeds:
   lan_dbt:
