refactor scheduling models: add stg_timesheet model, update stg_schedule logic, include sched_earning_codes source, and modify schema.yml and daily_import.py accordingly

--- a/lan_dbt/models/staging/source.yml
+++ b/lan_dbt/models/staging/source.yml
@@ -38,6 +38,7 @@ table_definitions: &common_tables
   - name: cad_trip_leg_shift_assignments
   - name: cad_trip_cancel_reason
   - name: cad_trip_history_log
+  - name: sched_earning_codes
 
 # Source definitions using the common template
 sources:
