update sched_hours.sql: ensure worked_hours is non-negative using GREATEST function

--- a/.dlt/config.toml
+++ b/.dlt/config.toml
@@ -10,3 +10,5 @@ tables = ["cad_trip_legs", "cad_trip_legs_rev", "cad_trip_leg_shift_assignments"
 
 [sources.tn_database.table_config]
 cad_trip_legs = {incremental = {cursor_column = "modified"}, write_disposition="merge", primary_key=["id"], merge_key=["id"]}
+sched_template_shift_assignments = {write_disposition="replace", primary_key=["id"]}
+timesheet = {write_disposition="replace", primary_key=["time_id"]}
