add models for time on task analysis and on-time performance tracking, including int_run_crew_assignments, int_shift_metrics, and derived analytics views

--- a/lan_dbt/models/staging/source.yml
+++ b/lan_dbt/models/staging/source.yml
@@ -39,6 +39,7 @@ table_definitions: &common_tables
   - name: cad_trip_cancel_reason
   - name: cad_trip_history_log
   - name: sched_earning_codes
+  - name: cad_reasons_for_transport
 
 # Source definitions using the common template
 sources:
