--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,14 @@ dependencies = [
     "dbt-core>=1.10.3",
     "dbt-postgres>=1.9.0",
     "dlt[postgres]>=1.12.3",
+    "holidays>=0.83",
     "nats-py>=2.11.0",
+    "pandas>=2.3.3",
+    "pandas-stubs==2.3.2.250926",
     "pre-commit>=4.2.0",
     "prefect-dbt>=0.7.4",
     "prefect-shell>=0.3.1",
     "prefect[github]>=3.4.7",
+    "prophet>=1.2.1",
     "pymysql>=1.1.1",
 ]
