add daily_dashboard model for BigQuery: implement schema, SQL logic, and table materialization for daily regional metrics aggregation and dashboard consumption

--- a/lan_dbt/dbt_project.yml
+++ b/lan_dbt/dbt_project.yml
@@ -38,6 +38,9 @@ models:
     intermediate:
       +materialized: view
       +schema: intermediate
+    bigquery:
+      +materialized: table
+      +schema: bigquery
 
 seeds:
   lan_dbt:
