--- a/prefect.yaml
+++ b/prefect.yaml
@@ -307,3 +307,13 @@ deployments:
     entrypoint: flows/bigquery_export.py:export_all_to_bigquery
     work_pool: *default_work_pool
     tags: *global_tags
+
+  # CAD Backfill (manual trigger only)
+  - name: CAD Backfill
+    description: Manually backfill CAD data for a custom date range across all markets
+    entrypoint: flows/cad_import.py:load_cad_backfill
+    work_pool: *default_work_pool
+    tags: *global_tags
+    parameters:
+      start_date: "2024-01-01"
+      end_date: "2024-01-07"
