--- a/lan_dbt/models/staging/source.yml
+++ b/lan_dbt/models/staging/source.yml
@@ -42,6 +42,7 @@ table_definitions: &common_tables
   - name: cad_trip_history_log
   - name: sched_earning_codes
   - name: cad_reasons_for_transport
+  - name: sched_vehicles
 
 # Source definitions using the common template
 sources:
